--- a/Software Engineering Fundamentals/pengu.html
+++ b/Software Engineering Fundamentals/pengu.html
@@ -208,7 +208,7 @@
         }
     
         body {
-            background: #c6faf1;
+            background: linear-gradient(65deg, darkred, orange, magenta);
         }
     
         .penguin * {
